--- a/index.html
+++ b/index.html
@@ -1,1 +1,118 @@
-Hi, this is my site!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+    }
+    #header {
+      background: linear-gradient(90deg, #007bff, #6c757d);
+      color: white;
+      padding: 50px 0;
+      text-align: center;
+    }
+    .project-card:hover {
+      transform: scale(1.05);
+      transition: transform 0.3s ease;
+    }
+    footer {
+      background: #6c757d;
+      color: white;
+      text-align: center;
+      padding: 20px 0;
+    }
+    #contact-form {
+      max-width: 600px;
+      margin: 0 auto;
+    }
+  </style>
+</head>
+<body>
+  <!-- Header -->
+  <header id="header">
+    <h1>My Portfolio</h1>
+    <p>Showcasing My Work and Skills</p>
+  </header>
+
+  <!-- About Section -->
+  <section class="container my-5">
+    <h2>About Me</h2>
+    <p>Hello! I'm a passionate individual skilled in web development, customer support, and data analytics. Welcome to my portfolio site, where you can explore my work and projects.</p>
+  </section>
+
+  <!-- Projects Section -->
+  <section class="container my-5">
+    <h2>Projects</h2>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card project-card">
+          <img src="https://via.placeholder.com/300" class="card-img-top" alt="Project 1">
+          <div class="card-body">
+            <h5 class="card-title">Project 1</h5>
+            <p class="card-text">A brief description of Project 1 goes here.</p>
+            <a href="#" class="btn btn-primary">View Details</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card project-card">
+          <img src="https://via.placeholder.com/300" class="card-img-top" alt="Project 2">
+          <div class="card-body">
+            <h5 class="card-title">Project 2</h5>
+            <p class="card-text">A brief description of Project 2 goes here.</p>
+            <a href="#" class="btn btn-primary">View Details</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card project-card">
+          <img src="https://via.placeholder.com/300" class="card-img-top" alt="Project 3">
+          <div class="card-body">
+            <h5 class="card-title">Project 3</h5>
+            <p class="card-text">A brief description of Project 3 goes here.</p>
+            <a href="#" class="btn btn-primary">View Details</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section class="container my-5">
+    <h2>Contact Me</h2>
+    <form id="contact-form">
+      <div class="mb-3">
+        <label for="name" class="form-label">Name</label>
+        <input type="text" class="form-control" id="name" placeholder="Your Name" required>
+      </div>
+      <div class="mb-3">
+        <label for="email" class="form-label">Email</label>
+        <input type="email" class="form-control" id="email" placeholder="Your Email" required>
+      </div>
+      <div class="mb-3">
+        <label for="message" class="form-label">Message</label>
+        <textarea class="form-control" id="message" rows="5" placeholder="Your Message" required></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary">Send Message</button>
+    </form>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2024 My Portfolio. All Rights Reserved.</p>
+  </footer>
+
+  <!-- JavaScript -->
+  <script>
+    document.getElementById('contact-form').addEventListener('submit', function(e) {
+      e.preventDefault();
+      alert('Thank you for your message!');
+    });
+  </script>
+</body>
+</html>
